tests/pos/explicit-null-nn/J.java
class J {
	String foo() { return "hello"; }
	String[] bar() { return null; }
}
