tests/neg/explicit-null-implicits/J.java

class J {
	Cat getCat() { return null; }
}

class Cat {}
class Dog {}
